[package]
name = "chatty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
crossterm = "0.26.1"
local-ip-address= "0.5.3"
serde = "1.0.163"
serde_derive = "1.0.163"
